--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,30 @@
-node_modules
+# Dependency directories
+node_modules/
 
+# Build output
 /.cache
 /build
+/dist
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Remix specific
+/public/build
+/public/assets
