--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "rehype-highlight": "^7.0.1",
+    "remark-gfm": "^4.0.0",
     "remix-themes": "^1.5.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
