--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "isbot": "^4.1.0",
-    "isomorphic-fetch": "^3.0.0",
     "jotai": "^2.10.3",
     "lucide-react": "^0.460.0",
+    "nanoid": "^5.0.8",
     "openai": "^4.73.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
