--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
@@ -33,10 +34,12 @@
     "clsx": "^2.1.1",
     "convex": "^1.17.3",
     "convex-helpers": "^0.1.65",
+    "date-fns": "^4.1.0",
     "isbot": "^4.1.0",
     "jotai": "^2.10.3",
     "lucide-react": "^0.460.0",
     "nanoid": "^5.0.8",
+    "next-themes": "^0.4.4",
     "openai": "^4.73.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
@@ -47,6 +50,7 @@
     "rehype-highlight": "^7.0.1",
     "remark-gfm": "^4.0.0",
     "remix-themes": "^1.5.1",
+    "sonner": "^1.7.1",
     "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -59,11 +63,11 @@
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-scroll-to-bottom": "^4.2.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.38.0",
