--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nanoid": "^5.0.8",
     "next-themes": "^0.4.4",
     "openai": "^4.73.0",
+    "posthog-js": "^1.205.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
