--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@clerk/remix": "^4.2.56",
     "@clerk/themes": "^2.1.52",
+    "@langchain/core": "^0.3.30",
+    "@langchain/openai": "^0.3.17",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -37,6 +39,7 @@
     "date-fns": "^4.1.0",
     "isbot": "^4.1.0",
     "jotai": "^2.10.3",
+    "langchain": "^0.3.11",
     "lucide-react": "^0.460.0",
     "nanoid": "^5.0.8",
     "next-themes": "^0.4.4",
