--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-chat-app",
+  "name": "ask-betty",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -42,7 +42,6 @@
     "langchain": "^0.3.11",
     "lucide-react": "^0.460.0",
     "nanoid": "^5.0.8",
-    "next-themes": "^0.4.4",
     "openai": "^4.73.0",
     "posthog-js": "^1.205.0",
     "prettier": "^3.3.3",
@@ -83,6 +82,7 @@
     "jsdom": "^23.0.1",
     "postcss": "^8.4.49",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "remix-development-tools": "^4.7.7",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
